--- a/style.css
+++ b/style.css
@@ -67,3 +67,52 @@
   width: 60px;
   height: 20px;
 }
+
+/* #region ANIMATIONS */
+
+.ex-1-square {
+  transition: background-color 2s;
+}
+
+.ex-1-square:hover {
+  background-color: red;
+}
+
+.ex-2-square {
+  transition: width 2s;
+}
+
+.ex-2-square:active {
+  width: 100%;
+}
+
+.ex-3-square {
+  transition: border-radius 2s;
+}
+
+.ex-3-square:hover {
+  border-radius: 50%;
+}
+
+.ex-4-square {
+  transition: opacity 2s;
+}
+
+.ex-4-square:hover {
+  opacity: 0;
+}
+
+.ex-5-square {
+  transition: scale 2s;
+}
+
+.ex-5-square:hover {
+  scale: 2;
+}
+
+.ex-5-square:active {
+  scale: 0.2;
+}
+
+
+/* #endregion ANIMATIONS * /
