--- a/style.css
+++ b/style.css
@@ -177,4 +177,45 @@
   }
 }
 
+.ex-12-button:hover .ex-12-top-white {
+  animation: move-right 2s linear infinite;
+}
+
+.ex-12-button:hover .ex-12-bottom-white {
+  animation: move-left 2s linear infinite;
+}
+
+@keyframes move-right {
+  0% {
+    top: -10px;
+    left: 10px;
+  }
+
+  50% {
+    top: -10px;
+    left: calc(100% - 10px - 60px);
+  }
+
+  100% {
+    top: -10px;
+    left: 10px;
+  }
+}
+
+@keyframes move-left {
+  0% {
+    bottom: -10px;
+    right: 20px;
+  }
+
+  50% {
+    bottom: -10px;
+    right: calc(100% - 20px - 60px);
+  }
+
+  100% {
+    bottom: -10px;
+    right: 20px;
+  }
+}
 /* #endregion ANIMATIONS * /
