--- a/style.css
+++ b/style.css
@@ -205,17 +205,89 @@
 @keyframes move-left {
   0% {
     bottom: -10px;
-    right: 20px;
+    right: 20%;
   }
 
   50% {
     bottom: -10px;
-    right: calc(100% - 20px - 60px);
+    right: calc(100% - 20% - 60px);
   }
 
   100% {
     bottom: -10px;
-    right: 20px;
+    right: 20%;
+  }
+}
+
+.ex-13-button:hover .ex-13-top-white {
+  animation: move-top 2s linear infinite;
+}
+
+.ex-13-button:hover .ex-13-bottom-white {
+  animation: move-bottom 2s linear infinite;
+}
+
+@keyframes move-top {
+  0% {
+    top: -10px;
+    left: 10px;
+  }
+
+  30% {
+    top: -10px;
+    left: calc(100% - 10px);
+  }
+
+  50% {
+    top: calc(100% - 10px);
+    left: calc(100% - 10px);
+  }
+
+  80% {
+    top: calc(100% - 10px);
+    left: -10px;
+  }
+
+  92% {
+    top: -10px;
+    left: -10px;
+  }
+
+  100% {
+    top: -10px;
+    left: 10px;
+  }
+}
+
+@keyframes move-bottom {
+  0% {
+    bottom: -10px;
+    right: 20%;
+  }
+
+  30% {
+    bottom: -10px;
+    right: calc(100% - 50px);
+  }
+
+  50% {
+    bottom: calc(100% - 10px);
+    right: calc(100% - 50px);
+  }
+
+  80% {
+    bottom: calc(100% - 10px);
+    right: -50px;
+  }
+
+  89% {
+    bottom: -10px;
+    right: -50px;
+  }
+
+  100% {
+    bottom: -10px;
+    right: 20%;
   }
 }
 /* #endregion ANIMATIONS * /
